@@ -26,4 +26,19 @@ copies.
 #include	"dotCOBOL_v.h"
 #include	"cobolvalue.h"
 #include	"valueconv.h"
+
+/* version infomation */
+
+static const unsigned int libmondai_major_version = @LIBMONDAI_MAJOR_VERSION@;
+static const unsigned int libmondai_minor_version = @LIBMONDAI_MINOR_VERSION@;
+static const unsigned int libmondai_micro_version = @LIBMONDAI_MICRO_VERSION@;
+
+#define LIBMONDAI_CHECK_VERSION(major,minor,micro)	\
+  (libmondai_major_version > (major)			\
+   || (libmondai_major_version == (major)		\
+       && libmondai_minor_version > (minor))		\
+   || (libmondai_major_version == (major)		\
+       && libmondai_minor_version == (minor)		\
+       && libmondai_micro_version >= (micro)))
+
 #endif
